implementation des fonctionnalites de connection,deconnexion,modification de mot de passe, ajouter a la creation de compte

--- a/medical_record/templates/base.html
+++ b/medical_record/templates/base.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     {% block content %}{% endblock content %}
+    <p><a href="{% url 'logout' %}">Se déconnecter</a></p>
+    <p><a href="{% url 'password_change' %}">changer le mot de passe</a></p>
 </body>
 </html>
