implementation de la fonctionnalite de d'affichage de la liste des patient qui de la vue en passant par les gabarits et en chuttant sur l'url.

--- a/medical_record/patient/templates/patient/homepage.html
+++ b/medical_record/patient/templates/patient/homepage.html
@@ -2,5 +2,6 @@
 {% block content %}
 <div>
     <h1>page d'acceuil</h1>
+    <a href="{% url 'patient_list' %}">liste des patients</a>
 </div>
 {% endblock content %}
