--- a/medical_record/templates/base.html
+++ b/medical_record/templates/base.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> medical record </title>
-    <link rel="stylesheet" href="{% static 'index.css'%}">
+    <link rel="stylesheet" href="{% static 'login.css'%}">
 </head>
 <body>
     {% block content %}{% endblock content %}
