--- a/medical_record/patient/templates/patient/form_examen_medical.html
+++ b/medical_record/patient/templates/patient/form_examen_medical.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 {% load static %}
-    <h2> Creation du rapport medical du patient ... </h2>
+    <h2>Creation dossier medical</h2>
     <form method="post">
         {{ form.as_p }}
         {% csrf_token %}
