page d'acceuil designer a 80%

--- a/medical_record/patient/templates/patient/examen_medical.html
+++ b/medical_record/patient/templates/patient/examen_medical.html
@@ -1,8 +1,9 @@
 {% extends 'base.html' %}
 {% block content %}
-
+<p class="headPage"></p>
 <h1>Dossier médical de </h1>
 {% for dossier in dossiers %}
+
 <ul>
     <li><strong>Type de rapport :</strong> {{ dossier.type_rapport }}</li>
     <li><strong>Date de création :</strong> {{ dossier.date_creation }}</li>
