--- a/medical_record/patient/templates/patient/patient_list.html
+++ b/medical_record/patient/templates/patient/patient_list.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
-
+<p class="headPage"></p>
 <h1>Liste des patients </h1>
 <div>
     {% for patient in patients %}
