--- a/medical_record/patient/templates/patient/homepage.html
+++ b/medical_record/patient/templates/patient/homepage.html
@@ -1,7 +1,8 @@
 {% extends 'base.html' %}
 {% block content %}
+<p class="headPage">{{user.profile_photo}}</p>
 <div>
-    <h1>page d'acceuil</h1>
-    <a href="{% url 'patient_list' %}">liste des patients</a>
+    
+<p class="welcome">bienvenu sur Medical Record Gajelabs,{{user.username }}</p>    
 </div>
 {% endblock content %}
