--- a/medical_record/patient/templates/patient/ordonnance_form.html
+++ b/medical_record/patient/templates/patient/ordonnance_form.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 {% load static %}
+<p class="headPage"></p>
 <h2>Ordonnance</h2>
 <form method="post">
     {{ form.as_p }}
