--- a/medical_record/patient/templates/patient/patients_hospitalise.html
+++ b/medical_record/patient/templates/patient/patients_hospitalise.html
@@ -1,3 +1,6 @@
+{% extends 'base.html' %}
+{% block content %}
+<p class="headPage"></p>
 <h1>Liste des patient hospitalises</h1>
 {% for patient_hospitalise in patients_hospitalises %}
 <ul>
@@ -11,3 +14,4 @@
     <div style="border-top: 1px solid #0e0c0c;"></div>
 </ul>
 {% endfor %}
+{% endblock %}
