--- a/medical_record/patient/templates/patient/rapport_medical.html
+++ b/medical_record/patient/templates/patient/rapport_medical.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
-
+<p class="headPage"></p>
 {% for rapport in rapports %}
 <h1>Rapport medical du {{ rapport.date_consultation }}</h1>
 <ul>
