quelques design faite sur les pages hospitalisation, liste des patients, ajout des patients

--- a/medical_record/authentication/templates/authentication/passwordChange.html
+++ b/medical_record/authentication/templates/authentication/passwordChange.html
@@ -1,9 +1,12 @@
 {% extends 'base.html' %}
 {% block content %}
-<h2>Changement de mot de passe</h2>
-<form method="post">
-    {{ form.as_p }}
-    {% csrf_token %}
-    <button type="submit">Changer le mot de passe</button>
-</form>
+<h2 class="headPasswordCh">Changement de mot de passe</h2>
+<div class="password_change">
+    
+    <form class="password_change_form" method="post">
+        {{ form.as_p }}
+        {% csrf_token %}
+        <button class="boutonPasswordVal" type="submit">Changer le mot de passe</button>
+    </form>
+</div>
 {% endblock content %}
