--- a/medical_record/patient/templates/patient/form_examen_medical.html
+++ b/medical_record/patient/templates/patient/form_examen_medical.html
@@ -1,8 +1,8 @@
 {% extends 'base.html' %}
 {% block content %}
 {% load static %}
-<p class="headPage"></p>
-    <h2>Creation dossier medical</h2>
+<p class="headPage"><span>Vous etes connecte en tant que {{user.username}}</span></p>
+<h2>Creation dossier medical</h2>
     <form method="post">
         {{ form.as_p }}
         {% csrf_token %}
