--- a/medical_record/authentication/templates/authentication/signup.html
+++ b/medical_record/authentication/templates/authentication/signup.html
@@ -1,12 +1,15 @@
 {% extends 'base.html' %}
 {% block content %}
-<h2>Inscription</h2>
+<p class="headPage"><span>Vous etes connecte en tant que {{user.username}}</span></p>
+<h2 class="AjoutMembre">Inscrire un membre</h2>
 {% if form.errors %}
 {{ form.errors }}
 {% endif %}
-<form method="POST">
-    {{ form.as_p }}
-    {% csrf_token %}
-    <button type="submit">S’inscrire</button>
-</form>
+<div class="InscriptionForm">
+    <form class="inscForm" method="POST">
+        {{ form.as_p }}
+        {% csrf_token %}
+        <button type="submit">Inscrire</button>
+    </form>
+</div>
 {% endblock content %}
