--- a/medical_record/patient/templates/patient/patients_hospitalise.html
+++ b/medical_record/patient/templates/patient/patients_hospitalise.html
@@ -1,17 +1,33 @@
 {% extends 'base.html' %}
 {% block content %}
-<p class="headPage"></p>
+<p class="headPage"><span>Vous etes connecte en tant que {{user.username}}</span></p>
 <h1>Liste des patient hospitalises</h1>
 {% for patient_hospitalise in patients_hospitalises %}
-<ul>
-    <li><span>{{ patient_hospitalise.patient.first_name }}</span>|
-    <span>{{ patient_hospitalise.patient.last_name }}</span>|
-    <span>{{patient_hospitalise.motif}}</span>|
-    <span>{{patient_hospitalise.medecin}}</span>|
-    <span>{{patient_hospitalise.numero_de_chambre }}</span>|
-    <span>{{patient_hospitalise.date_hospitalisation }}</span>
-    <span><a href="{% url 'ordonner_medicament' patient_hospitalise.id %}">ordonner des comprimes</a></span></li>
-    <div style="border-top: 1px solid #0e0c0c;"></div>
-</ul>
+<div class="hospitaliseContent">
+    <div class="contentPatient">
+        <div class="patientInf">
+            <span class="Title">Nom</span><span>{{ patient_hospitalise.patient.first_name }}</span>
+        </div>
+        <div class="patientInf">
+            <span class="Title">prenom </span><span>{{ patient_hospitalise.patient.last_name }}</span>
+        </div>
+        <div class="patientInf">
+            <span class="Title">Motif</span><span>{{patient_hospitalise.motif}}</span>
+        </div>
+        <div class="patientInf">
+            <span class="Title">Medecin</span><span>{{patient_hospitalise.medecin}}</span>
+        </div>
+        <div class="patientInf">
+            <span class="Title">Chambre </span><span>{{patient_hospitalise.numero_de_chambre }}</span>
+        </div>
+        <div class="patientInf">
+            <span class="Title">Hospitalisation</span><span>{{patient_hospitalise.date_hospitalisation }}</span>
+        </div>
+    </div>
+    <div class="linkContent">
+        <span><a href="{% url 'ordonner_medicament' patient_hospitalise.id %}">Prescrire des comprimes</a></span>
+    </div>
+</div>
+<div  style="border-top: 1px solid #0e0c0c;margin-left: 5px;margin-right: 5px;"></div>
 {% endfor %}
 {% endblock %}
