--- a/medical_record/static/homepage.css
+++ b/medical_record/static/homepage.css
@@ -62,6 +62,13 @@ img{
     margin-top: 0;
 }
 
+.headPage span{
+    position: absolute;
+    right: 0;
+    margin-right: 10px;
+    color: white;
+}
+
 .links p a:hover{
     text-decoration: underline;
 }
