--- a/medical_record/static/login.css
+++ b/medical_record/static/login.css
@@ -26,3 +26,13 @@ h2{
     font-size: 30px;
     text-align: center;
 }
+.errorlist li {
+    list-style-type: none;
+}
+.errorlist li{
+    text-decoration: none;
+    font-size: 7px;
+    font-weight: bold;
+    color: rgb(178, 80, 80);
+    width: 280px;
+}
