--- a/medical_record/authentication/templates/authentication/signup.html
+++ b/medical_record/authentication/templates/authentication/signup.html
@@ -9,7 +9,7 @@
     <form class="inscForm" method="POST">
         {{ form.as_p }}
         {% csrf_token %}
-        <button type="submit">Inscrire</button>
+        <button type="submit">Ajouter</button>
     </form>
 </div>
 {% endblock content %}
