--- a/medical_record/patient/templates/patient/patient_list.html
+++ b/medical_record/patient/templates/patient/patient_list.html
@@ -2,29 +2,47 @@
 {% block content %}
 <p class="headPage"><span>Vous etes connecte en tant que {{user.username}}</span></p>
 
-<div class="imagePatient_add">
-    <span>patients</span>
-    <a class="addPatient" href="{% url 'signup' %}">Ajouter patient<a>
-</div>
-
-<div class="content_patient_list">
-    {% for patient in patients %}
+<p class="imagePatient_add">
+    <strong>patients</strong>
+</p>
+<div class="list_patient_scroll">
+    <div class="content_patient_list">
+        {% for patient in patients %}
         <div class="info_link_patient">
             <div class="infoPatient">
                 <div class="patien_list"><span class="label">Nom </span><span>{{ patient.first_name }}</span></div>
                 <div class="patien_list"><span class="label">Prenom </span><span>{{patient.last_name}}</span></div>
-                <div class="patien_list"><span class="label">Date de naissance </span><span>{{patient.date_naissance}}</span></div>
+                <div class="patien_list"><span class="label">Date de naissance
+                    </span><span>{{patient.date_naissance}}</span></div>
                 <div class="patien_list"><span class="label">Sex</span><span> {{ patient.sex }}</span></div>
             </div>
             <div class="linkPatient">
-                <span><a class="dossierM" href="{% url 'dossier_medical' patient.id %}"> Dossier Medical </a></span>
-                <span><a class="dossierM" href="{% url 'creer_dossier_medical' patient.id %}"> creer dossier medical</a></span><span><a class="dossierM"
-                        href="{% url 'hospitalise_patient' patient.id %}">hospitalise ce patient</a></span>
-                <span><a class="dossierM" href="{% url 'list_ordonnance' patient.id %}">ordonnances</a></span>
+                {% if perms.patient.view_dossier_medical or user.id == patient.id%}
+                <span>
+                    <a class="dossierM" href="{% url 'dossier_medical' patient.id %}"> Dossier Medical </a>
+                </span>
+                {% endif %}
+                {% if perms.patient.view_rapport_medical%}
+                <span>
+                    <a class="dossierM" href="{% url 'creer_dossier_medical' patient.id %}"> creer dossier medical</a>
+                </span>
+                {% endif %}
+                {% if perms.patient.view_hospitalisation %}
+                <span>
+                    <a class="dossierM" href="{% url 'hospitalise_patient' patient.id %}">hospitalise ce patient</a>
+                </span>
+                {% endif %}
+                {% if perms.patient.view_ordonnance or user.id == patient.id %}
+                <span>
+                    <a class="dossierM" href="{% url 'list_ordonnance' patient.id %}">ordonnances</a>
+                </span>
+                {% endif %}
             </div>
         </div>
-            <div style="border-top: 1px solid #0e0c0c;"></div>
-    {% endfor %}
+        <div style="border-top: 1px solid #0e0c0c;"></div>
+        {% endfor %}
+    </div>
 </div>
+
 
 {% endblock %}
