--- a/medical_record/static/patient_list.css
+++ b/medical_record/static/patient_list.css
@@ -1,7 +1,7 @@
-.content_patient_list,h1{
+.content_patient_list{
     margin-left: 3px;
     margin-right: 3px;
-    margin-top: 40px;
+    margin-top: 20px;
 }
 
 .content_patient_list .info_link_patient{
@@ -60,6 +60,11 @@
     flex-wrap: wrap;
     grid:10px;
     font-size: 15px;
+    padding: 0px;
+}
+
+.linkPatient:first-child {
+    display: none;
 }
 
 .dossierM{
@@ -73,14 +78,9 @@
 .linkPatient .dossierM:hover{
     background-color: #00000080;
 }
-
-.content_patient_list{
-    margin-top: 30px;
-}
-
 .imagePatient_add{
-    width: 100%;
     margin-left: 5px;
+    margin-bottom: 0px;
 }
 
 .imagePatient_add a{
@@ -98,4 +98,6 @@
     background-color: #00000080;
 }
 
-
+.list_patient_scroll{
+        overflow-y: auto;
+}
