--- a/medical_record/patient/templates/patient/form_examen_medical.html
+++ b/medical_record/patient/templates/patient/form_examen_medical.html
@@ -2,10 +2,10 @@
 {% block content %}
 {% load static %}
 <p class="headPage"><span>Vous etes connecte en tant que {{user.username}}</span></p>
-<h2>Creation dossier medical</h2>
-    <form method="post">
+<h3>Creation dossier medical</h3>
+    <form class="formOrdonnance" method="post">
         {{ form.as_p }}
         {% csrf_token %}
-        <button type="submit">Valider</button>
+        <button class="boutonOrdonnance" type="submit">Valider</button>
     </form>
 {% endblock content %}
