--- a/medical_record/patient/templates/patient/patient_list.html
+++ b/medical_record/patient/templates/patient/patient_list.html
@@ -6,7 +6,7 @@
     <strong>patients</strong>
 </p>
 <div class="list_patient_scroll">
-    <div class="content_patient_list">
+    <div class="content_patient_list" style="overflow: auto; height: 400px;">
         {% for patient in patients %}
         <div class="info_link_patient">
             <div class="infoPatient">
