--- a/medical_record/static/login.css
+++ b/medical_record/static/login.css
@@ -41,4 +41,54 @@ h2{
     color: white;
     background-color: #4350C3;
     border-radius: 5px;
+    box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.5);
+}
+.formLogin .boutonLogin:hover{
+    background-color: #00000080;
+}
+.formLogin p input{
+    width: 150px;
+    border-radius: 5px;
+    box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.5);
+}
+
+/* ============================== */
+/* ordonnance */
+.formOrdonnance,h3{
+    margin-left: 10px;
+    width: 80%;
+    margin: auto;
+}
+.boutonOrdonnance{
+    background-color: #4350C3;
+    border-radius: 5px;
+    color: white;
+    box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.5);
+}
+
+.boutonOrdonnance:hover{
+    background-color:#00000080;
+}
+
+h3{
+    font-weight: bold;
+    font-size: 30px;
+    margin-bottom: 40px;
+    margin-top: 20px;
+}
+
+.formOrdonnance p label{
+    font-weight: bold;
+}
+
+.formOrdonnance p select{
+    width: 150px;
+    border-radius: 5px;
+    box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.5);
+}
+/* =============== Rapport medical form =================== */
+.formOrdonnance p input {
+    width: 150px;
+    border-radius: 5px;
+    box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.5);
 }
