suite des modifications

--- a/medical_record/patient/templates/patient/medecin_list.html
+++ b/medical_record/patient/templates/patient/medecin_list.html
@@ -6,7 +6,7 @@
     <strong>Medecins</strong>
 </p>
 <div class="list_patient_scroll">
-    <div class="content_patient_list">
+    <div class="content_patient_list" style="overflow: auto; height: 400px;">
         {% for medecin in medecins %}
         <div class="info_link_patient">
             <div class="infoPatient">
