--- a/medical_record/patient/templates/patient/examen_medical.html
+++ b/medical_record/patient/templates/patient/examen_medical.html
@@ -2,11 +2,12 @@
 {% block content %}
 <p class="headPage"><span>Vous etes connecte en tant que {{user.username}}</span></p>
 <h1 class="DateRapport">Dossiers médicals</h1>
-{% for dossier in dossiers %}
-
-<div class="listeRapport">
-    <div class="elementRapport"><strong>Type de rapport</strong><span>{{ dossier.type_rapport }}</span></div>
-    <div class="elementRapport"><strong>Date de création</strong><span>{{ dossier.date_creation }}</span></div>
+<div style="overflow: auto; height: 400px;">
+    {% for dossier in dossiers %}
+    
+    <div class="listeRapport">
+        <div class="elementRapport"><strong>Type de rapport</strong><span>{{ dossier.type_rapport }}</span></div>
+        <div class="elementRapport"><strong>Date de création</strong><span>{{ dossier.date_creation }}</span></div>
         <span>
             <a href="{% url 'rapport_medical' dossier.id %}">Rapports medicals</a>
         </span>
@@ -14,8 +15,10 @@
             <a href="{% url 'creer_rapport_medical' dossier.id %}"> Ajouter un rapport medical
             </a>
         </span>
+    </div>
+    <div class="DateRapport" style="border-top: 1px solid #0e0c0c;"></div>
+    {% endfor %}
 </div>
-<div class="DateRapport" style="border-top: 1px solid #0e0c0c;"></div>
-{% endfor %}
+
 
 {% endblock %}
