--- a/medical_record/patient/templates/patient/rapport_medical.html
+++ b/medical_record/patient/templates/patient/rapport_medical.html
@@ -1,16 +1,20 @@
 {% extends 'base.html' %}
 {% block content %}
 <p class="headPage"><span>Vous etes connecte en tant que {{user.username}}</span></p>
-{% for rapport in rapports %}
-<h1 class="DateRapport">Rapport medical du {{ rapport.date_consultation }}</h1>
-<div class="listeRapport">
-    <div class="elementRapport"><strong>motif de la consultation </strong> <span>{{ rapport.motif_consultation }}</span></div>
-    <div class="elementRapport"><strong>traitement prescrit </strong><span>{{ rapport.traitement_prescrit }}</span></div>
-    <div class="elementRapport"><strong>recommandation</strong><span>{{ rapport.recommandation }}</span></div>
-    <div class="elementRapport"><strong>Medecin traitant</strong><span>{{ rapport.medecin }}</span></div>
-    <div class="elementRapport"><strong>mise a jour le </strong><span>{{ rapport.date_modification }}</span></div>
+<div style="overflow: auto; height: 400px;">
+    {% for rapport in rapports %}
+    <h1 class="DateRapport">Rapport medical du {{ rapport.date_consultation }}</h1>
+    <div class="listeRapport">
+        <div class="elementRapport"><strong>motif de la consultation </strong> <span>{{ rapport.motif_consultation }}</span>
+        </div>
+        <div class="elementRapport"><strong>traitement prescrit </strong><span>{{ rapport.traitement_prescrit }}</span>
+        </div>
+        <div class="elementRapport"><strong>recommandation</strong><span>{{ rapport.recommandation }}</span></div>
+        <div class="elementRapport"><strong>Medecin traitant</strong><span>{{ rapport.medecin }}</span></div>
+        <div class="elementRapport"><strong>mise a jour le </strong><span>{{ rapport.date_modification }}</span></div>
+    </div>
+    <div class="DateRapport" style="border-top: 1px solid #0e0c0c;"></div>
+    {% endfor %}
 </div>
-<div class="DateRapport" style="border-top: 1px solid #0e0c0c;"></div>
-{% endfor %}
 
 {% endblock %}
